syntax = "proto3";

option go_package="../pb;pb";



message CheckPassWordRequest {
  string username = 1;
  string password = 2;
}
message CheckPassWordResponse {
  int64 user_id = 2;
  string  token = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1;
  string token = 2;
}

service UserService {
  rpc CheckPassword(CheckPassWordRequest) returns (CheckPassWordResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

